configurable CAS attributes

--- a/ckanext/cas/cas_roles.properties
+++ b/ckanext/cas/cas_roles.properties
@@ -1,14 +1,22 @@
-[role.admin]
+[role]
+role.attribute.name.org.id = SubjectID
+role.attribute.name.roles = SPR.Roles
+role.attribute.name.user.name.first = first_name
+role.attribute.name.user.name.last = last_name
+
+# if role.is.org is True, creates organization with id from org id attribute or role.group.name
+# if org.id (e.g. SubjectID) is not given
+[role.1]
 role.spr = MOD-R-PO
 role.group.name = app-admin
 role.is.org = True
 
-[role.editor]
-role.spr = MOD-R-EDITOR
-role.group.name = moderator
+[role.2]
+role.spr = MOD-R-DATA
+role.group.name = data-curator
 role.is.org = False
 
-[role.member]
-role.spr = MOD-R-MEMBER
-role.group.name = member
+[role.3]
+role.spr = MOD-R-TRANSA
+role.group.name = spravca-transformacii
 role.is.org = False
