--- a/ckanext/cas/cas_roles.properties
+++ b/ckanext/cas/cas_roles.properties
@@ -1,22 +1,27 @@
 [role]
-role.attribute.name.org.id = SubjectID
+role.attribute.name.org.id = ou
 role.attribute.name.roles = SPR.Roles
-role.attribute.name.user.name.first = first_name
-role.attribute.name.user.name.last = last_name
+role.attribute.name.user.name.first = givenName
+role.attribute.name.user.name.last = sn
 
-# if role.is.org is True, creates organization with id from org id attribute or role.group.name
-# if org.id (e.g. SubjectID) is not given
+# if role.is.org is True, creates organization with id from org id attribute
+# or role.group.name if org.id is not given
+
+# EXAMPLE ROLE
+#[role.N]
+#role.spr = UserRoleInCAS # CAS role
+#role.group.role = member | editor | admin # CKAN role within organization/group
+#role.group.name = OrganizationOrGroupIdAndName
+#role.group.is_org = True | False
+
 [role.1]
-role.spr = MOD-R-PO
-role.group.name = app-admin
-role.is.org = True
+role.name = Administrator
+role.group.role = admin
+role.group.name = comsode
+role.group.is_org = True
 
 [role.2]
-role.spr = MOD-R-DATA
-role.group.name = data-curator
-role.is.org = False
-
-[role.3]
-role.spr = MOD-R-TRANSA
-role.group.name = spravca-transformacii
-role.is.org = False
+role.name = User
+role.group.role = member
+role.group.name = comsode
+role.group.is_org = True
