--- a/ckanext/cas/cas_roles.properties
+++ b/ckanext/cas/cas_roles.properties
@@ -4,15 +4,15 @@ role.attribute.name.roles = SPR.Roles
 role.attribute.name.user.name.first = givenName
 role.attribute.name.user.name.last = sn
 
-# if role.is.org is True, creates organization with id from org id attribute
+# if role.group.is_org is True, creates organization with id from org id attribute
 # or role.group.name if org.id is not given
 
 # EXAMPLE ROLE
-#[role.N]
-#role.spr = UserRoleInCAS # CAS role
-#role.group.role = member | editor | admin # CKAN role within organization/group
-#role.group.name = OrganizationOrGroupIdAndName
-#role.group.is_org = True | False
+# [role.N]
+# role.spr = UserRoleInCAS # CAS role
+# role.group.role = member | editor | admin # CKAN role within organization/group
+# role.group.name = OrganizationId | OrganizationName | GroupId | GroupName
+# role.group.is_org = True | False
 
 [role.1]
 role.name = Administrator
